# super_gmae

./: pyproject.toml  test_picamera.py
gmae/: AudioStream.py  __main__.py  find_devices.py  find_video_captures.py  loop_state.py  processor.py  processor_utils.py  test_picamera.py  utils.py
gmae/shaders/: basic.py  frag.glsl  original_frag.glsl  vertex.glsl
unused/: read_video0.py  stderr_watcher.py  test_picamera.py
