[tool.poetry]
name = "gmae"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.10.0.82"
pywin32 = "^306"
capture-devices = "^4.2"
glfw = "^2.7.0"
pyopengl = "^3.1.7"
pyopengl-accelerate = "^3.1.7"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
